--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
 <section class="section" id="contacts">
     <h2 class="section-title">Contacts</h2>
     <ul class="section-list">
-        <li class="section-item contacts-item">Telegram:@ilya203</li>
+        <li class="section-item contacts-item">Minsk,Belarus</li>
+        <li class="section-item contacts-item">Telegram:
+            <a href="https://t.me/ilya203"> @ilya203</a></li>
         <li class="section-item contacts-item">Phone:80445832373</li>
         <li class="section-item contacts-item">Mail: mahnach04@mail.ru</li>
-        <li class="section-item contacts-item">GitHub: @qwertytr1</li>
+        <li class="section-item contacts-item">GitHub: 
+            <a href="https://github.com/qwertytr1">@qwertytr1</a></li>
     </ul>
 
 </section>
