--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <section class="section" id="profile">
     <img src="/rsschool-cv/assets/img/MyPhoto.jpg" alt="" class="Photo">
     <div class="section-profile-title">
-<h1 class="section-title main-title">Ilya Mahnach</h1>
+<h1 class="section-title main-title">Ilya Makhnach</h1>
 </div>
 </section>
 <section class="section" id="contacts">
